tc addressing some of tt's comments; need to rebase on dev before continuing, wont compile

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -6,11 +6,11 @@ knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = TRUE)
 
 ## Overview 
 In previous chapters, we focused solely on descriptive and exploratory
-questions about data. 
+data analysis questions. 
 This chapter and the next together serve as our first
 foray into answering *predictive* questions about data. In particular, we will
-focus on the problem of *classification*, i.e., using one or more quantitative
-variables to predict the value of a third, categorical variable. This chapter
+focus on *classification*, i.e., using one or more 
+variables to predict the value of a categorical variable of interest. This chapter
 will cover the basics of classification, how to preprocess data to make it
 suitable for use in a classifier, and how to use our observed data to make
 predictions. The next will focus on how to evaluate how accurate the
@@ -36,17 +36,17 @@ patient as either diseased or healthy based on their symptoms and the doctor's
 past experience with patients; an email provider might want to tag a given
 email as "spam" or "not spam" depending on past email text data; or an online
 store may want to predict whether an order is fraudulent or not. 
-
 These tasks are all examples of **classification**, i.e., predicting a
 categorical class (sometimes called a *label*) for an observation given its
-other quantitative variables (sometimes called *features*). Generally, a
-classifier assigns an observation (e.g. a new patient) to a class (e.g.
-diseased or healthy) on the basis of how similar it is to other observations
-for which we know the class (e.g. previous patients with known diseases and
+other variables (sometimes called *features*). 
+
+Generally, a classifier assigns an observation without a known class (e.g. a new patient) 
+to a class (e.g. diseased or healthy) on the basis of how similar it is to other observations
+for which we do know the class (e.g. previous patients with known diseases and
 symptoms). These observations with known classes that we use as a basis for
-prediction are called a **training set**. We call them a "training set" because
-we use these observations to train, or teach, our classifier so that we can use
-it to make predictions on new data that we have not seen previously.
+prediction are called a **training set**; this name comes from the fact that
+we use these data to train, or teach, our classifier. Once taught, we can use
+the classifier to make predictions on new data for which we do not know the class.
 
 There are many possible methods that we could use to predict
 a categorical class/label for an observation. In this book we will
