tc addressing tt comments on 05-clsfn

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -256,13 +256,17 @@ neighbours <- cancer[order(my_distances$Distance), ]
 ```
 
 In order to actually make predictions for new observations in practice, we
-will need a classification algorithm; here we will use the K-nearest neighbour
+will need a classification algorithm. Here we will use the K-nearest neighbours
 classification algorithm.
 To predict the label of a new observation (here, classify it as either benign
 or malignant), the K-nearest neighbours classifier generally finds the $K$
 "nearest" or "most similar" observations in our training set, and then uses
-their diagnoses to make a prediction for the new observation's diagnosis. To
-illustrate this concept, we will walk through an example.  Suppose we have a
+their diagnoses to make a prediction for the new observation's diagnosis. $K$ 
+is a number that we must choose; for now, we will assume that someone has chosen
+$K$ for us. We will cover how to choose $K$ ourselves in the next chapter. 
+
+To illustrate the concept of K-nearest neighbours classification, we 
+will walk through an example.  Suppose we have a
 new observation, with perimeter of `r new_point[1]` and concavity of `r new_point[2]` 
 (labelled in red on the scatterplot), whose diagnosis "Class" is
 unknown.
