--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -632,7 +632,8 @@ predictions? In order to find out, we will create a scatter plot of these two
 predictors (coloured by diagnosis) for both the unstandardized data we just
 loaded, and the standardized version of that same data. 
 
-In the `tidymodels` framework, all data preprocessing happens using a [`recipe`](https://tidymodels.github.io/recipes/reference/index.html).
+In the `tidymodels` framework, all data preprocessing happens 
+using a [`recipe`](https://tidymodels.github.io/recipes/reference/index.html).
 Here we will initialize a recipe for the `unscaled_cancer` data above, specifying
 that the `Class` variable is the target, and all other variables are predictors:
 ```{r 05-scaling-2}
@@ -642,6 +643,8 @@ print(uc_recipe)
 So far, there is not much in the recipe; just a statement about the number of targets
 and predictors. Let's add scaling (`step_scale`) and centering (`step_center`) steps for 
 all of the predictors so that they each have a mean of 0 and standard deviation of 1.
+Note that `tidyverse` actually provides `step_normalize`, which does both centering and scaling in
+a single recipe step; in this book we will use the separate `step_scale` and `step_center` steps. 
 The `prep` function finalizes the recipe by using the data (here, `unscaled_cancer`) 
 to compute anything necessary to run the recipe (in this case, the column means and standard
 deviations):
