added description of choosing variables by understanding

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -670,8 +670,17 @@ Wow! Once we add sufficiently many irrelevant predictor variables, our classifie
 does not do much better than just always guessing "benign", 
  the most common class label in the data (63% of observations are benign).
 
-So then if we can't just throw in the kitchen sink, how do we choose which
-variables to use as predictors?  This is a very difficult question to answer in
+So then if we can't just use all of our variables as predictors without consideration, how 
+do we choose which variables we *should* use?  
+A simple&mdash;but often very effective&mdash;method is to rely on your scientific understanding
+of the data to tell you which variables are not likely to be useful predictors. For example, in the cancer
+data that we have been studying, the `ID` variable is just a unique identifier for the observation.
+As it is not related to any measured property of the cells, the `ID` variable should therefore not be used
+as a predictor. On the other hand, the remaining variables all seem like reasonable candidates; it 
+is not clear which subset of them will create the best classifier.
+
+We therefore need a more systematic and programmatic way of choosing variables. 
+This is a very difficult problem to solve in
 general, and there are a number of methods that have been developed that apply
 in particular cases of interest; see the additional resources at the end of
 this chapter to find out where you can learn more about variable selection.
