added description of choosing variables by eda/viz

--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -676,8 +676,11 @@ A simple&mdash;but often very effective&mdash;method is to rely on your scientif
 of the data to tell you which variables are not likely to be useful predictors. For example, in the cancer
 data that we have been studying, the `ID` variable is just a unique identifier for the observation.
 As it is not related to any measured property of the cells, the `ID` variable should therefore not be used
-as a predictor. On the other hand, the remaining variables all seem like reasonable candidates; it 
-is not clear which subset of them will create the best classifier.
+as a predictor. That is, of course, a very clear-cut case. But the decision for the remaining variables 
+is less obvious, as all seem like reasonable candidates. It 
+is not clear which subset of them will create the best classifier. One could use visualizations and
+other exploratory analyses to try to help understand which variables are potentially relevant, but
+this process is both time-consuming and error-prone when there are many variables to consider.
 
 We therefore need a more systematic and programmatic way of choosing variables. 
 This is a very difficult problem to solve in
