--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -672,7 +672,7 @@ does not do much better than just always guessing "benign",
 
 So then if we can't just use all of our variables as predictors without consideration, how 
 do we choose which variables we *should* use?  
-A simple&mdash;but often very effective&mdash;method is to rely on your scientific understanding
+A simple method is to rely on your scientific understanding
 of the data to tell you which variables are not likely to be useful predictors. For example, in the cancer
 data that we have been studying, the `ID` variable is just a unique identifier for the observation.
 As it is not related to any measured property of the cells, the `ID` variable should therefore not be used
