--- a/06-classification_continued.Rmd
+++ b/06-classification_continued.Rmd
@@ -608,9 +608,11 @@ plot_irrelev
 ```
 </center>
 
-Next, we build a sequence of K-NN classifiers that include both `Smoothness` and `Concavity` as predictor variables,
-but also increasingly many irrelevant variables (from 0 to 500 of them). Each model is tuned via 5-fold cross-validation.
-We show the plot of estimated accuracy versus the number of irrelevant predictors below.
+Next, we build a sequence of K-NN classifiers that include both `Smoothness`
+and `Concavity` as predictor variables, but also increasingly many irrelevant
+variables (from 0 to 500 of them). Each model is tuned via 5-fold
+cross-validation. We show the plot of cross-validation accuracy estimate versus 
+the number of irrelevant predictors below.
 <center>
 ```{r 06-performance-irrelevant-features, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "600", fig.cap = "Effect of inclusion of irrelevant predictors"}
 set.seed(1)
